syntax = "proto3";
package valprotocol;
import "common/common.proto";
import "protocol/protocol.proto";
option go_package = "github.com/offchainlabs/arbitrum/packages/arb-validator/valprotocol";

message PreconditionBuf {
    common.HashBuf beforeHash = 1;
    protocol.TimeBoundsBlocksBuf timeBounds = 2;
    common.HashBuf beforeInbox = 3;
}

message ExecutionAssertionStubBuf {
    common.HashBuf afterHash = 1;
    bool   didInboxInsn = 2;
    uint64 numGas = 3;
    common.HashBuf firstMessageHash = 4;
    common.HashBuf lastMessageHash = 5;
    common.HashBuf firstLogHash = 6;
    common.HashBuf lastLogHash = 7;
}

message AddressBuf {
    bytes value = 1;
}

message TokenTypeBuf {
    bytes value = 1;
}

message MessageBuf {
    bytes value = 1;
    TokenTypeBuf tokenType = 2;
    common.BigIntegerBuf amount = 3;
    AddressBuf sender = 4;
}

